# uhh

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml
src/uhh/: __init__.py  cli.py  setup.py  wizard.py
tests/: test_cli.py
